# arax-onednn-riscv

./: .arax  README.md  clone_deps.sh  conf.json  prep.sh  riscv.sh
OneDnn/: CMakeLists.txt
OneDnn/cmake/: Coverage.cmake  arax.cmake  onednn.cmake  onednn_patch.patch  tensorflow.cmake
OneDnn/example/: CMakeLists.txt  README.md  example.cpp
OneDnn/src/: DataPack.cpp  DataPack.h  PrimitiveMap.cpp  PrimitiveMap.h  Utils.cpp  Utils.h  dnnl_convolution.cpp  dnnl_eltwise.cpp  dnnl_engine.cpp  dnnl_memory.cpp  dnnl_memory_desc.cpp  dnnl_primitive.cpp  dnnl_status2str.c  dnnl_stream.cpp  empty.c
OneDnn/tests/: CMakeLists.txt  dnnl_memory.cpp  dnnl_stream.cpp
OneDnn/tf/: 0001-Dynamicaly-link-with-MKL-OneAPI.patch
